-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.4.0-beta1
-
8b9456e41c9fd756c3a02c096a68ee127e33652e
- Create some files that are not in the project
- Modify a file that is part of the project
- Git Commit - unrelated files are filtered out
- Switch window and switch back - unrelated files appear
VcsBaseSubmitEditor::filterUntrackedFilesOfProject() is used to find untracked files that are part of the project, in order to filter out the rest of them.
This function uses VcsBaseSubmitEditor::currentProjectFiles(), which gets the current project by calling ProjectExplorer::ProjectTree::currentProject().
When the submit editor is open, currentProject() returns 0, so no files are filtered out.
- is duplicated by
-
QTCREATORBUG-14533 A manual "git add" with an open "git commit" dialog leads to all untracked files being listed there
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-13955 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 106809,2 | VCS: Fix wrong use of currentProject for file list refreshing | 3.4 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 106813,11 | Vcs: Use correct project to trim down list of files on commit | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |