Vcs: Use correct project to trim down list of files on commit

Task-number: QTCREATORBUG-13955
Change-Id: I9961e981864f7dc261c2028fd3b80a36647a9a00
Reviewed-by: Orgad Shaneh <orgads@gmail.com>